OO-7499: rollback changes for ending in leadtime